fix: responsive layout issue

--- a/traflix-web/src/components/TravelScheduleCompoent/DesktopDefault.module.scss
+++ b/traflix-web/src/components/TravelScheduleCompoent/DesktopDefault.module.scss
@@ -1,8 +1,13 @@
 @import '../../assets/scsses/config';
 
+.container {
+  width: 100%;
+}
+
 .main {
   margin-bottom: 5px;
 }
+
 .icon {
   margin: 5px 0 5px 10px;
   height: 25px;
