--- a/traflix-web/src/pages/DirectionPage/DesktopDefault.module.scss
+++ b/traflix-web/src/pages/DirectionPage/DesktopDefault.module.scss
@@ -1,6 +1,27 @@
 @import '../../assets/scsses/config';
 
+.pageContainer {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
 .mapContainer {
   width: 100%;
   min-width: 400px;
+  height: 100%;
+}
+
+.sidebarContainer {
+  width: 400px;
+  min-width: 400px;
+  height: 100%;
+}
+
+.cardItemsContainer {
+  height: 90%;
+  padding-top: 2%;
+  padding-bottom: 5%;
+  overflow: scroll;
 }
