--- a/traflix-web/src/pages/DirectionPage/MobileDefault.module.scss
+++ b/traflix-web/src/pages/DirectionPage/MobileDefault.module.scss
@@ -1,7 +1,26 @@
 @import '../../assets/scsses/config';
-@import '../../assets/scsses/config';
+
+.pageContainer {
+  height: 100%;
+  overflow: hidden;
+}
 
 .mapContainer {
   width: 100%;
-  min-width: 100px;
+  min-width: 400px;
+  height: 100%;
+}
+
+.sidebarContainer {
+  width: 100%;
+  min-width: 400px;
+  height: 30vh;
+  overflow: hidden;
+}
+
+.cardItemsContainer {
+  height: 95%;
+  padding-top: 2%;
+  padding-bottom: 10%;
+  overflow: scroll;
 }
